add chat inside the project

--- a/public/html/adminHome.html
+++ b/public/html/adminHome.html
@@ -27,7 +27,7 @@
                 <div class="div-8"><a href="./manageCoaches.html">Coaches</a></div>
                 <div class="div-9"><a href="./manageTrainees.html">Trainess</a></div>
                 <div class="div-10"><a href="./manageExercises.html">Exercises</a></div>
-                <div class="div-10"><a href="adminLogin.html">Logout</a></div>
+                <div class="div-10"><a href="#" id="logoutLink">Logout</a></div>
               </div>
             </div>
           </div>
@@ -93,5 +93,6 @@
       </div>
 
       <script src="../js/adminHome.js"></script>
+      <script src="../js/logoutAdmin.js"></script>
 </body>
 </html>
