--- a/public/html/coachHome.html
+++ b/public/html/coachHome.html
@@ -25,10 +25,10 @@
               <div class="div-6">
                 <div class="div-7"><a href="coachHome.html">Home</a></div>
                 <div class="div-7"><a href="profileCoach.html">Profile</a></div>
-                <div class="div-8"><a href="workouts.html">Workouts</a></div>
-                <div class="div-9"><a href="exerciseLibrary.html">Exercises</a></div>
-                <div class="div-10"><a href="http://localhost:3002">Chat</a></div>
-                <div class="div-10"><a href="user_type.html">Logout</a></div>
+                <div class="div-8"><a href="./coachWorkouts.html">Workouts</a></div>
+                <div class="div-9"><a href="./coachExerciseLibrary.html">Exercises</a></div>
+                <div class="div-10"><a href="./chatCoach.html">Chat</a></div>
+                <div class="div-10"><a href="#" id="logoutLink">Logout</a></div>
                 <div class="div-11">
                     <a href="#" id="othersLink">Others</a>
                     <div id="othersOptions" style="display: none;">
@@ -113,5 +113,6 @@
       </div>
 
       <script src="../js/coachHome.js"></script>
+      <script src="../js/logout.js"></script>
 </body>
 </html>
