--- a/public/html/coachWorkouts.html
+++ b/public/html/coachWorkouts.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Workouts</title>
 <link rel="stylesheet" href="../css/custom_alert.css">
-<link rel="stylesheet" href="../css/workouts.css">
+<link rel="stylesheet" href="../css/coachWorkouts.css">
 </head>
 <body>
     <div class="gym-activity-tracker">
@@ -20,16 +20,15 @@
               </div>
               <div class="nav-container">
                 <div class="nav-menu">
-                  <div class="nav-item"><a href="trainee_home.html">Home</a></div>
-                  <div class="nav-item"><a href="profileTrainee.html">Profile</a></div>
-                  <div class="nav-item"><a href="workouts.html">Workouts</a></div>
-                  <div class="nav-item"><a href="exerciseLibrary.html">Exercises</a></div>
-                  <div class="nav-item"><a href="./chatTrainee.html">Chat</a></div>
+                  <div class="nav-item"><a href="./coachHome.html">Home</a></div>
+                  <div class="nav-item"><a href="./profileCoach.html">Profile</a></div>
+                  <div class="nav-item"><a href="./coachWorkouts.html">Workouts</a></div>
+                  <div class="nav-item"><a href="./coachExerciseLibrary.html">Exercises</a></div>
+                  <div class="nav-item"><a href="./chatCoach.html">Chat</a></div>
                   <div class="nav-item"><a href="#" id="logoutLink">Logout</a></div>
                   <div class="nav-item">
                       <a href="#" id="othersLink">Others</a>
                       <div id="othersOptions" style="display: none;">
-                        <div><a href="recommendedBodyPart.html">Recommended Exercises</a></div>
                         <div><a href="TrackProgress.html">Track Your Progress</a></div>
                     </div>
                   </div>
@@ -81,7 +80,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="../js/workouts.js"></script>
+    <script src="../js/coachWorkouts.js"></script>
     <script src="../js/logout.js"></script>
 </body>
 </html>
