--- a/public/html/profileCoach.html
+++ b/public/html/profileCoach.html
@@ -20,16 +20,16 @@
                 </div>
                 <div class="nav-container">
                     <div class="nav-menu">
-                        <div class="nav-item"><a href="coachHome.html">Home</a></div>
-                        <div class="nav-item"><a href="profileCoach.html">Profile</a></div>
-                        <div class="nav-item"><a href="workouts.html">Workouts</a></div>
-                        <div class="nav-item"><a href="exerciseLibrary.html">Exercises</a></div>
-                        <div class="nav-item"><a href="http://localhost:3002">Chat</a></div>
-                        <div class="nav-item"><a href="user_type.html">Logout</a></div>
+                        <div class="nav-item"><a href="./coachHome.html">Home</a></div>
+                        <div class="nav-item"><a href="./profileCoach.html">Profile</a></div>
+                        <div class="nav-item"><a href="./coachWorkouts.html">Workouts</a></div>
+                        <div class="nav-item"><a href="./coachExerciseLibrary.html">Exercises</a></div>
+                        <div class="nav-item"><a href="./chatCoach.html">Chat</a></div>
+                        <div class="nav-item"><a href="#" id="logoutLink">Logout</a></div>
                         <div class="nav-item">
                             <a href="#" id="othersLink">Others</a>
                             <div id="othersOptions" style="display: none;">
-                                <div><a href="TrackProgress.html">Track trainee Progress</a></div>
+                                <div><a href="TrackProgress.html">Track Your Progress</a></div>
                             </div>
                         </div>
                     </div>
@@ -132,5 +132,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../js/profileCoach.js"></script>
+    <script src="../js/logout.js"></script>
 </body>
 </html>
