--- a/public/html/startEmptyWorkout.html
+++ b/public/html/startEmptyWorkout.html
@@ -23,8 +23,8 @@
                         <div class="nav-item"><a href="profileTrainee.html">Profile</a></div>
                         <div class="nav-item"><a href="workouts.html">Workouts</a></div>
                         <div class="nav-item"><a href="exerciseLibrary.html">Exercises</a></div>
-                        <div class="nav-item"><a href="http://localhost:3002">Chat</a></div>
-                        <div class="nav-item"><a href="user_type.html">Logout</a></div>
+                        <div class="nav-item"><a href="./chatTrainee.html">Chat</a></div>
+                        <div class="nav-item"><a href="#" id="logoutLink">Logout</a></div>
                         <div class="nav-item">
                             <a href="#" id="othersLink">Others</a>
                             <div id="othersOptions" style="display: none;">
@@ -94,5 +94,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js" integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
 
     <script src="../js/startEmptyWorkout.js"></script>
+    <script src="../js/logout.js"></script>
 </body>
 </html>
