--- a/public/html/trainee_home.html
+++ b/public/html/trainee_home.html
@@ -27,8 +27,8 @@
                 <div class="div-7"><a href="profileTrainee.html">Profile</a></div>
                 <div class="div-8"><a href="workouts.html">Workouts</a></div>
                 <div class="div-9"><a href="exerciseLibrary.html">Exercises</a></div>
-                <div class="div-10"><a href="http://localhost:3002">Chat</a></div>
-                <div class="div-10"><a href="user_type.html">Logout</a></div>
+                <div class="div-10"><a href="./chatTrainee.html">Chat</a></div>
+                <div class="div-10"><a href="#" id="logoutLink">Logout</a></div>
                 <div class="div-11">
                     <a href="#" id="othersLink">Others</a>
                     <div id="othersOptions" style="display: none;">
@@ -132,5 +132,6 @@
       </div>
 
       <script src="../js/trainee_home.js"></script>
+      <script src="../js/logout.js"></script>
 </body>
 </html>
