--- a/public/html/trainee_register.html
+++ b/public/html/trainee_register.html
@@ -24,7 +24,7 @@
                         <div class="div-7">
                             <label for="firstName">First Name:</label>
                             <span style="color: rgba(255, 0, 0, 1)">*</span>
-                            <input type="text" id="firstName" required name="firstName" value="papa"/>
+                            <input type="text" id="firstName" required name="firstName" />
                             <span id="firstNameError" class="input-error-message" style="color: red; display: none;">
                                 Please enter your first name.
                             </span>
@@ -32,7 +32,7 @@
                         <div class="div-9">
                             <label for="lastName">Last Name:</label>
                             <span style="color: rgba(255, 0, 0, 1)">*</span>
-                            <input type="text" id="lastName" required name="lastName" value="papa2"/>
+                            <input type="text" id="lastName" required name="lastName" />
                             <span id="lastNameError" class="input-error-message" style="color: red; display: none;">
                                 Please enter your last name.
                             </span>
@@ -40,25 +40,25 @@
                         <div class="div-11">
                             <label for="username">Username:</label>
                             <span style="color: rgba(255, 0, 0, 1)">*</span>
-                            <input type="text" id="username" required name="username" value="papa3"/>
+                            <input type="text" id="username" required name="username"/>
                             <span id="usernameError" class="input-error-message"></span>
                         </div>
                         <div class="div-13">
                             <label for="password">Password:</label>
                             <span style="color: rgba(255, 0, 0, 1)">*</span>
-                            <input type="password" id="password" required name="password" value="12345678As!"/>
+                            <input type="password" id="password" required name="password" />
                             <span id="passwordError" class="input-error-message"></span>
                         </div>
                         <div class="div-15">
                             <label for="confirmPassword">Confirm Password:</label>
                             <span style="color: rgba(255, 0, 0, 1)">*</span>
-                            <input type="password" id="confirmPassword" required name="confirmPassword" value="12345678As!"/>
+                            <input type="password" id="confirmPassword" required name="confirmPassword" />
                             <span id="confirmPasswordError" class="input-error-message"></span>
                         </div>
                         <div class="div-17">
                             <label for="email">Email:</label>
                             <span style="color: rgba(255, 0, 0, 1)">*</span>
-                            <input type="email" id="email" required name="email" value="tt@gmail.com"/>
+                            <input type="email" id="email" required name="email" />
                             <span id="emailError" class="input-error-message"></span>
                         </div>
                         <div class="div-19">
