--- a/public/html/coachExerciseDetails.html
+++ b/public/html/coachExerciseDetails.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exercise Library</title>
-  <link rel="stylesheet" href="../css/exerciseLibrary.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Exercise Details</title>
+    <link rel="stylesheet" href="../css/coachExerciseDetails.css">
 </head>
 <body>
     <div class="gym-activity-tracker">
@@ -19,16 +19,15 @@
                 </div>
                 <div class="nav-container">
                     <div class="nav-menu">
-                        <div class="nav-item"><a href="trainee_home.html">Home</a></div>
-                        <div class="nav-item"><a href="profileTrainee.html">Profile</a></div>
-                        <div class="nav-item"><a href="workouts.html">Workouts</a></div>
-                        <div class="nav-item"><a href="exerciseLibrary.html">Exercises</a></div>
-                        <div class="nav-item"><a href="./chatTrainee.html">Chat</a></div>
+                        <div class="nav-item"><a href="./coachHome.html">Home</a></div>
+                        <div class="nav-item"><a href="./profileCoach.html">Profile</a></div>
+                        <div class="nav-item"><a href="./coachWorkouts.html">Workouts</a></div>
+                        <div class="nav-item"><a href="./coachExerciseLibrary.html">Exercises</a></div>
+                        <div class="nav-item"><a href="./chatCoach.html">Chat</a></div>
                         <div class="nav-item"><a href="#" id="logoutLink">Logout</a></div>
                         <div class="nav-item">
                             <a href="#" id="othersLink">Others</a>
                             <div id="othersOptions" style="display: none;">
-                                <div><a href="recommendedBodyPart.html">Recommended Exercises</a></div>
                                 <div><a href="TrackProgress.html">Track Your Progress</a></div>
                             </div>
                         </div>
@@ -39,27 +38,25 @@
 
 
 
-        <div class="exercise-library" id="exercise-library">
 
-            <div class="exercise-card">
-              <img src="../imgs/Atlas Stones.png" alt="Exercise 1">
-              <h2>Exercise 1</h2>
-            </div>
-            <div class="exercise-card">
-                <img src="../imgs/Barbell deficit deadlift.png" alt="Exercise 2">
-                <h2>Exercise 2</h2>
-            </div>
-            <div class="exercise-card">
-                <img src="../imgs/Barbell forward lunge.png" alt="Exercise 3">
-                <h2>Exercise 3</h2>
-            </div>
-            <div class="exercise-card">
-                <img src="../imgs/Barbell glute bridge.png" alt="Exercise 4">
-                <h2>Exercise 4</h2>
-            </div>
-            <!-- Add more exercise cards here -->
 
+        <div class="exercise-details">
+            <div class="exercise-image">
+                <img id="exercise-image" src="../imgs/Barbell glute bridge.png" alt="Exercise Image">
+            </div>
+            <div class="exercise-info">
+                <h1 id="exercise-name">Exercise Name</h1>
+                <p><strong>Difficulty:</strong> <span id="exercise-difficulty"></span></p>
+                <p><strong>Equipment:</strong> <span id="exercise-equipment"></span></p>
+                <p><strong>Muscle:</strong> <span id="exercise-muscle"></span></p>
+                <p><strong>Type:</strong> <span id="exercise-type"></span></p>
+                <p><strong>Instructions:</strong></p>
+                <p id="exercise-instructions"></p>
+            </div>
         </div>
+
+
+
 
 
 
@@ -81,11 +78,8 @@
 
     </div>
 
-
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js" integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
-
-    <script src="../js/exerciseLibrary.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="../js/exerciseDetails.js"></script>
     <script src="../js/logout.js"></script>
 </body>
 </html>
