--- a/public/html/coachExerciseLibrary.html
+++ b/public/html/coachExerciseLibrary.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exercise Library</title>
-  <link rel="stylesheet" href="../css/exerciseLibrary.css">
+  <link rel="stylesheet" href="../css/coachExerciseLibrary.css">
 </head>
 <body>
     <div class="gym-activity-tracker">
@@ -19,16 +19,15 @@
                 </div>
                 <div class="nav-container">
                     <div class="nav-menu">
-                        <div class="nav-item"><a href="trainee_home.html">Home</a></div>
-                        <div class="nav-item"><a href="profileTrainee.html">Profile</a></div>
-                        <div class="nav-item"><a href="workouts.html">Workouts</a></div>
-                        <div class="nav-item"><a href="exerciseLibrary.html">Exercises</a></div>
-                        <div class="nav-item"><a href="./chatTrainee.html">Chat</a></div>
+                        <div class="nav-item"><a href="./coachHome.html">Home</a></div>
+                        <div class="nav-item"><a href="./profileCoach.html">Profile</a></div>
+                        <div class="nav-item"><a href="./coachWorkouts.html">Workouts</a></div>
+                        <div class="nav-item"><a href="./coachExerciseLibrary.html">Exercises</a></div>
+                        <div class="nav-item"><a href="./chatCoach.html">Chat</a></div>
                         <div class="nav-item"><a href="#" id="logoutLink">Logout</a></div>
                         <div class="nav-item">
                             <a href="#" id="othersLink">Others</a>
                             <div id="othersOptions" style="display: none;">
-                                <div><a href="recommendedBodyPart.html">Recommended Exercises</a></div>
                                 <div><a href="TrackProgress.html">Track Your Progress</a></div>
                             </div>
                         </div>
@@ -85,7 +84,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js" integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
 
-    <script src="../js/exerciseLibrary.js"></script>
+    <script src="../js/coachExerciseLibrary.js"></script>
     <script src="../js/logout.js"></script>
 </body>
 </html>
