--- a/public/html/exerciseDetails.html
+++ b/public/html/exerciseDetails.html
@@ -23,8 +23,8 @@
                         <div class="nav-item"><a href="profileTrainee.html">Profile</a></div>
                         <div class="nav-item"><a href="workouts.html">Workouts</a></div>
                         <div class="nav-item"><a href="exerciseLibrary.html">Exercises</a></div>
-                        <div class="nav-item"><a href="http://localhost:3002">Chat</a></div>
-                        <div class="nav-item"><a href="user_type.html">Logout</a></div>
+                        <div class="nav-item"><a href="./chatTrainee.html">Chat</a></div>
+                        <div class="nav-item"><a href="#" id="logoutLink">Logout</a></div>
                         <div class="nav-item">
                             <a href="#" id="othersLink">Others</a>
                             <div id="othersOptions" style="display: none;">
@@ -81,5 +81,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../js/exerciseDetails.js"></script>
+    <script src="../js/logout.js"></script>
 </body>
 </html>
