--- a/public/html/manageProfileCoach.html
+++ b/public/html/manageProfileCoach.html
@@ -24,7 +24,7 @@
                         <div class="nav-item"><a href="./manageCoaches.html">Coaches</a></div>
                         <div class="nav-item"><a href="./manageTrainees.html">Trainees</a></div>
                         <div class="nav-item"><a href="./manageExercises.html">Exercises</a></div>
-                        <div class="nav-item"><a href="adminLogin.html">Logout</a></div>
+                        <div class="nav-item"><a href="#" id="logoutLink">Logout</a></div>
                     </div>
                 </div>
             </div>
@@ -133,5 +133,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../js/manageProfileCoach.js"></script>
+    <script src="../js/logoutAdmin.js"></script>
 </body>
 </html>
