--- a/public/html/manageTrainees.html
+++ b/public/html/manageTrainees.html
@@ -23,7 +23,7 @@
                       <div class="nav-item"><a href="./manageCoaches.html">Coaches</a></div>
                       <div class="nav-item"><a href="./manageTrainees.html">Trainees</a></div>
                       <div class="nav-item"><a href="./manageExercises.html">Exercises</a></div>
-                      <div class="nav-item"><a href="adminLogin.html">Logout</a></div>
+                      <div class="nav-item"><a href="#" id="logoutLink">Logout</a></div>
                     </div>
                 </div>
             </div>
@@ -68,5 +68,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js" integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
 
     <script src="../js/manageTrainees.js"></script>
+    <script src="../js/logoutAdmin.js"></script>
 </body>
 </html>
