--- a/public/html/recommendedBodyPart.html
+++ b/public/html/recommendedBodyPart.html
@@ -24,8 +24,8 @@
             <div class="div-7"><a href="profileTrainee.html">Profile</a></div>
             <div class="div-8"><a href="workouts.html">Workouts</a></div>
             <div class="div-9"><a href="exerciseLibrary.html">Exercises</a></div>
-            <div class="div-10"><a href="http://localhost:3002">Chat</a></div>
-            <div class="div-10"><a href="user_type.html">Logout</a></div>
+            <div class="div-10"><a href="./chatTrainee.html">Chat</a></div>
+            <div class="div-10"><a href="#" id="logoutLink">Logout</a></div>
             <div class="div-10">
                 <a href="#" id="othersLink">Others</a>
                 <div id="othersOptions" style="display: none;">
@@ -117,5 +117,6 @@
 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js" integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
       <script src="../js/recommendedBodyPart.js"></script>
+      <script src="../js/logout.js"></script>
 </body>
 </html>
