--- a/public/html/traineeLogin.html
+++ b/public/html/traineeLogin.html
@@ -22,10 +22,10 @@
                             <div class="div-5">Login as Trainee</div>
                             <div class="div-6">
                                 <div class="div-7">Email</div>
-                                <input type="email" id="email" required name="email" value="tt@gmail.com"/>
+                                <input type="email" id="email" required name="email"/>
                                 <span id="emailError" class="input-error-message"></span>
                                 <div class="div-9">Password</div>
-                                <input type="password" id="password" required name="password" value="12345678As!"/>
+                                <input type="password" id="password" required name="password"/>
                                 <span id="passwordError" class="input-error-message"></span>
                                 <div class="div-10">
                                     <a href="#" class="forgot-password-link">Forgot Password?</a>
